tests/invalid/depth03.h
#include "depth04.h"
